<resources>
    <string name="app_name">Practica5</string>
    <string name="welcome_text">Welcome to the Protales!</string>
    <string name="welcome_description">Taqueria Los Portales Is a quick, casual restaurant.</string>
    <string name="button_start">get started!</string>

    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have rad and accept termns and conditions of the Los Portales</string>
    <string name="sing_in">Sing in</string>

    <string name="antojitos">ANTOJITOS</string>
    <string name="especialidades">ESPECIALIDADES</string>
    <string name="combinations">COMBOS</string>
    <string name="tortas">TORTAS</string>
    <string name="sopas">SOPAS</string>
    <string name="drinks">BEBIDAS</string>
    <string name="our_menu">Our Menu</string>
</resources>