<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/imagen1"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />
    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/e_mail"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/input_margin"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_marginTop="@dimen/input_margin"
        android:textStyle="italic"
        />
    <Button
        android:id="@+id/btnSingIn"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:text="@string/sing_in"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />
</LinearLayout>